--- a/content-src/components/DiscoveryStreamComponents/List/_List.scss
+++ b/content-src/components/DiscoveryStreamComponents/List/_List.scss
@@ -1,4 +1,5 @@
 // Type sizes
+$bordered-spacing: 16px;
 $item-font-size: 13;
 $item-image-size: 72px;
 $item-line-height: 20;
@@ -11,8 +12,7 @@ $item-line-height: 20;
   .ds-list-item:not(:nth-last-child(-n+#{$columns})) {
     border-bottom: $border-secondary;
     margin-bottom: -1px;  // cancel out the pixel we used for the border
-
-    padding-bottom: 2px;
+    padding-bottom: $bordered-spacing;
   }
 }
 
@@ -67,7 +67,6 @@ $item-line-height: 20;
     .ds-column-11 &,
     .ds-column-12 & {
       grid-template-columns: repeat(3, 1fr);
-      grid-row-gap: 18px;
     }
 
     .ds-list-item-excerpt {
@@ -126,7 +125,8 @@ $item-line-height: 20;
 
 .ds-list-borders {
   border-top: $border-secondary;
-  padding-top: $item-line-height * 1px;
+  grid-row-gap: $bordered-spacing;
+  padding-top: $bordered-spacing;
 
   &.ds-list-full-width,
   .ds-column-1 &,
@@ -167,8 +167,6 @@ $item-line-height: 20;
 
   .ds-list-item-link {
     mix-blend-mode: normal;
-
-    padding-bottom: 16px;
 
     display: flex;
     justify-content: space-between;
